--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="">Mike</a>.
+    Coded by <a href="">MB</a>.
   </div>
 </body>
 </html>
