--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
 </head>
 <body>
-<div class="whitecontainer">
-<img class="qrcode" src="images/image-qr-code.png" />
-<p class="boldtext">Improve your front-end skills by building projects</p>
-<p class="lighttext">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-</div>
+  <main>
+   <div class="whitecontainer">
+     <img class="qrcode" src="images/image-qr-code.png" />
+     <p class="boldtext">Improve your front-end skills by building projects</p>
+     <p class="lighttext">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+   </div>
+  </main>
 
 
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="">MB</a>.
-  </div>
+  </footer>
 </body>
 </html>
